--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,22 +1,16 @@
 {
-  "name": "backend",
+  "name": "waco",
   "version": "1.0.0",
-  "description": "",
-  "main": "server.js",
+  "description": "shopping cart backend uing nodejs",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Sumurth",
   "license": "ISC",
   "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "express-validator": "^6.12.0",
-    "mongoose": "^5.13.0"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.8"
+    "express-handlebars": "^5.3.2",
+    "express-session": "^1.17.2"
   }
 }
